# healthcare-nlp

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile.api  Dockerfile.train
experiments/: stage1.sh  stage2.sh  stage2_2.sh  stage2_3.sh  stage2_4.sh  stage3_biobert_stage1.sh
infra/: launch_training.py
notebooks/: 00_EDA.ipynb
scripts/: create_dataloaders.py  evaluate.py  prepare_dataset.py  run_baseline.py  run_training.py
src/healthcare_nlp/: baseline.py  data.py  data_preprocessing.py  model.py  text_utils.py  train.py
src/healthcare_nlp/api/: app.py  inference.py  schemas.py
tests/: test_baseline.py  test_data.py  test_model.py  test_processing.py  test_train.py
